--- a/web/pages/home.html
+++ b/web/pages/home.html
@@ -52,7 +52,12 @@
     <div class="position-absolute bottom-0 end-0 p-4">
         <div class="card">
             <div class="card-body">
-                <button class="btn btn-primary" id="btnRanking">Ir a ranking</button>
+                <div id="container-ranking" class="w-100">
+
+                </div>
+                <div class="w-100">
+                    <button class="btn btn-primary btn-sm w-100" id="btnRanking">Ir a ranking</button>
+                </div>
             </div>
         </div>
     </div>
