fixed height level and crud

--- a/web/pages/home.html
+++ b/web/pages/home.html
@@ -116,7 +116,7 @@
                             <select class="form-select" aria-label="Default select example" id="difficult">
                                 <option value="easy">Facil</option>
                                 <option value="medium">Medio</option>
-                                <option value="high">Dificil</option>
+                                <option value="height">Dificil</option>
                             </select>
                         </div>
                     </div>
