--- a/web/pages/questions.html
+++ b/web/pages/questions.html
@@ -11,7 +11,7 @@
     }
 </style>
 
-<div class="center-screen w-100 text-center">
+<div class="center-screen w-100 text-center p-4">
     <div class="w-75">
         <div class="text-start">
             <button class="btn btn-primary mt-3" id="btnHome">Home</button>
@@ -24,7 +24,7 @@
             <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center mb-2">
                     <div class="input-group mb-3 w-25">
-                        <input type="text" class="form-control" placeholder="Buscar..." aria-label="Buscar"
+                        <input type="text" id="searchQuestion" class="form-control" placeholder="Buscar..." aria-label="Buscar"
                             aria-describedby="basic-addon1">
                     </div>
                     <button type="button" class="btn btn-primary" id="btnOpenAddModalQuestion">
@@ -46,7 +46,7 @@
                                 <th scope="col">#</th>
                                 <th scope="col">Pregunta</th>
                                 <th scope="col">Imatge</th>
-                                <th scope="col">Respostes</th>
+                                <th scope="col">Respostas</th>
                                 <th scope="col">Acciones</th>
                             </tr>
                         </thead>
