fixed finishh page and look questions correct and incorrect

--- a/web/pages/finish.html
+++ b/web/pages/finish.html
@@ -14,36 +14,33 @@
 
 <div class="center-screen">
     <p class="fw-bold text-white" style="font-size: 10vh;">Resultado</p>
-    <div class="card w-75">
+    <div class="card w-50">
         <div class="card-body">
             <!-- <img id="profilePicturePlayer"/> -->
-            <div class="row">
-                <div class="col-lg-2 col-12">
+            <div class="d-flex justify-content-center align-items-center">
+                <div class="me-lg-4">
                     <div style="border-radius: 100px; width:80px; height: 80px; overflow: hidden;">
                         <img id="profilePic" src="ruta/a/tu-imagen.jpg" alt="Profile Picture"
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                 </div>
-                <div class="col-lg-3 col-12">
+                
+                <div class="me-lg-5">
                     <p class="fs-3 fw-bold m-0" id="namePlayer"></p>
-
                 </div>
-                <div class="col-lg-2 col-12">
+                <div class="me-lg-5">
                     <p class="fs-3 fw-bold m-0" id="result"></p>
-
                 </div>
-                <div class="col-lg-3 col-12">
+                <div class="me-lg-5">
                     <p class="fs-3 fw-bold m-0" id="time"></p>
-
                 </div>
-                <div class="col-lg-2 col-12">
+                <div class="me-lg-5">
                     <p class="fs-3 fw-bold m-0" id="totalPoints"></p>
-
                 </div>
             </div>
         </div>
     </div>
-    <div class="d-flex w-75 mt-lg-4">
+    <div class="d-flex w-50 mt-lg-4">
         <button class="btn btn-primary me-2" id="btnHome">Home</button>
         <button class="btn btn-primary" id="btnRetryGame">Retry</button>
     </div>
