change copy in button retry game

--- a/web/pages/finish.html
+++ b/web/pages/finish.html
@@ -58,7 +58,7 @@
     </div>
     <div class="d-flex w-50 mt-lg-4">
         <button class="btn btn-primary me-2" id="btnHome">Home</button>
-        <button class="btn btn-primary" id="btnRetryGame">Retry</button>
+        <button class="btn btn-primary" id="btnRetryGame">Tornar a jugar</button>
     </div>
 
     <div class="w-50 mt-lg-4 mt-2">
