--- a/web/pages/login.html
+++ b/web/pages/login.html
@@ -10,9 +10,20 @@
     body {
         background-color: #71CBF0;
     }
+
+    .w-custom-card{
+        width: 40%!important;
+    }
+
+    @media (max-width: 576px) {
+        .w-custom-card{
+            width: 85%!important;
+        }
+
+    }
 </style>
 <div class="center-screen w-100 text-center" id="content">
-    <div class="card" style="width: 40%;">
+    <div class="card w-custom-card">
         <div class="card-body">
             <div class="row">
                 <div class="col-lg-12 col-12">
