--- a/web/pages/finish.html
+++ b/web/pages/finish.html
@@ -16,18 +16,16 @@
         filter: invert(32%) sepia(100%) saturate(7000%) hue-rotate(240deg) brightness(95%) contrast(100%);
     }
 
-    .carousel-indicators button {
+
+    /* .carousel-indicators button {
         background-color: rgba(0, 123, 255, 0.5) !important;
-        /* Azul primario semi-transparente */
         border: none !important;
     }
 
     .carousel-indicators .active {
         background-color: #007bff !important;
-        /* Azul primario sólido */
-    }
+    } */
 
-    /* Estilos generales */
     .w-lg-50 {
         width: 50%;
     }
@@ -36,68 +34,112 @@
         width: 75%;
     }
 
-    @media (min-width: 992px) {
-        .w-lg-50 {
-            width: 50%;
-        }
+    .containerCarousel{
+        height: 250px;
+    }
 
-        .w-sm-75 {
-            width: auto;
-        }
+    .w-custom-responsive{
+        width: 50%;
+    }
+
+    .fs-custom-title{
+        font-size: 10vh;
+    }
+
+    .fs-custom-text{
+        font-size: 1.75rem !important;
+    }
+
+    .fs-custom-label{
+        font-size: 1.25rem !important;
+    }
+
+    .img-size{
+        width:80px !important; 
+        height: 80px !important;
+    }
+
+    @media (min-width: 992px) {
+        
     }
 
     @media (max-width: 576px) {
-        .w-sm-75 {
-            width: 75%;
+        
+        .w-custom-responsive{
+            width: 80%;
         }
 
-        .w-lg-50 {
-            width: auto;
+        .containerCarousel{
+            height: 400px;
+        }
+
+        .fs-custom-title{
+            font-size: 5vh;
+        }
+
+        .fs-custom-text{
+            font-size: 1rem !important;
+        }
+
+        .fs-custom-label{
+            font-size: 0.85rem !important;
+        }
+
+        .img-size{
+            width: 40px !important; 
+            height: 40px !important;
         }
     }
 </style>
 
 <div class="center-screen">
-    <p class="fw-bold text-white" style="font-size: 10vh;">Resultado</p>
-    <div class="card w-lg-50 w-sm-75">
+    <p class="fw-bold text-white fs-custom-title">Resultado</p>
+    <div class="card w-custom-responsive">
         <div class="card-body">
             <!-- <img id="profilePicturePlayer"/> -->
             <div class="d-flex justify-content-center align-items-center">
                 <div class="me-lg-4">
-                    <div style="border-radius: 100px; width:80px; height: 80px; overflow: hidden;">
+                    <div class="img-size" style="border-radius: 100px; overflow: hidden;">
                         <img id="profilePic" src="ruta/a/tu-imagen.jpg" alt="Profile Picture"
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                 </div>
 
-                <div class="me-lg-5">
-                    <p class="fs-3 fw-bold m-0" id="namePlayer"></p>
+                <div class="me-lg-5 text-center">
+                    <label class="text-primary fs-custom-label">Nombre</label>
+                    <p class="fs-custom-text fw-bold m-0" id="namePlayer"></p>
                 </div>
-                <div class="me-lg-5">
-                    <p class="fs-3 fw-bold m-0" id="result"></p>
+                <div class="me-lg-5 text-center">
+                    <label class="text-primary fs-custom-label">Resultado</label>
+                    <p class="fs-custom-text fw-bold m-0" id="result"></p>
                 </div>
-                <div class="me-lg-5">
-                    <p class="fs-3 fw-bold m-0" id="time"></p>
+                <div class="me-lg-5 text-center">
+                    <label class="text-primary fs-custom-label">Tiempo</label>
+                    <p class="fs-custom-text fw-bold m-0" id="time"></p>
                 </div>
-                <div class="me-lg-5">
-                    <p class="fs-3 fw-bold m-0" id="totalPoints"></p>
+                <div class="me-lg-5 text-center">
+                    <label class="text-primary fs-custom-label">Puntuación</label>
+                    <p class="fs-custom-text fw-bold m-0" id="totalPoints"></p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="w-lg-50 w-sm-75 d-flex mt-lg-4">
+    <div class="w-custom-responsive d-flex mt-lg-4 mt-4">
         <button class="btn btn-primary me-2" id="btnHome">Home</button>
         <button class="btn btn-primary" id="btnRetryGame">Tornar a jugar</button>
     </div>
 
-    <div class="w-75 mt-lg-4 mt-2">
-        <div class="card w-100" style="min-height: 200px;">
+    <div class="w-custom-responsive mt-lg-4 mt-2">
+        <label class="text-white fs-1 fw-bold">Respuestas:</label>
+        <div class="card w-100" 
+        style="min-height: 200px;">
             <div class="card-body">
-                <label class="text-primary fs-6">Respuestas:</label>
-                <div id="carouselExampleIndicators" class="carousel slide w-100" style="min-height: 200px;">
+                <div id="carouselExampleIndicators" class="carousel slide w-100" 
+                style="min-height: 200px;">
                     <div class="carousel-indicators" id="btnCarouselIndicators">
                     </div>
-                    <div class="carousel-inner" style="min-height: 200px;"
+                    <div class="carousel-inner" 
+                    style="min-height: 200px;"
                         id="containerCarouselIndicators">
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
