--- a/web/pages/home.html
+++ b/web/pages/home.html
@@ -4,7 +4,7 @@
     }
 
     .center-screen {
-        height: 100vh;
+        height: 80vh;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -19,6 +19,31 @@
         width: 60%;
     }
 
+    .img-size {
+        width: 200px !important;
+        height: 200px !important;
+    }
+
+    .img-profile-pic {
+        width: 30px !important;
+        height: 30px !important;
+    }
+
+    .fs-custom-btn {
+        font-size: 1rem !important;
+    }
+
+    .fs-custom-name {
+        font-size: 1rem !important;
+    }
+
+    .container-ranking-pos {
+        top: auto;
+            left: auto;
+            bottom: 0;
+            left: 0;
+    }
+
     /* Si quieres mantener proporciones entre texto e imagen en todos los tamaños */
     @media (min-width: 768px) {
         .w-btn-play {
@@ -28,45 +53,93 @@
         .w-lg-25 {
             width: 25% !important;
         }
+
+        .img-size {
+            width: 500px !important;
+            height: 500px !important;
+        }
+
+        .fs-custom-btn {
+            font-size: 2.25rem !important;
+        }
+
+        .img-profile-pic {
+            width: 40px !important;
+            height: 40px !important;
+        }
+
+        .fs-custom-name {
+            font-size: calc(1.275rem + .3vw) !important;
+        }
+
+        .container-ranking-pos {
+            top: auto;
+            left: auto;
+            bottom: 0;
+            left: 0;
+        }
+
+        .center-screen {
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
     }
 </style>
 <div class="center-screen w-100 text-center" id="content">
     <div class="row w-100">
-        <div class="col-lg-12 col-12">
-            <img src="../img/question.png" class="img-fluid" />
+        <div class="col-lg-12 col-12 d-flex justify-content-center align-content-center">
+            <div class="img-size" style=" overflow: hidden;">
+                <img src="../img/question.png" class="img-fluid"
+                    style="width: 100%; height: 100%; object-fit: cover;" />
+            </div>
         </div>
     </div>
-    <div class="row w-100 mt-3">
+    <div class="row w-100 ">
         <div class="col-lg-12 col-12">
-            <div class="d-flex justify-content-center align-items-center">
-                <div class="w-50 w-lg-25" id="containerBtnPlay">
-                    <button class="btn btn-primary btn-lg fs-2 fw-bold btn-shadow w-100" id="btnPlay">JUGAR</button>
+            <div class="d-flex justify-content-center align-items-center flex-column">
+                <div class="w-50 w-lg-25 mb-lg-4 mb-2" id="containerBtnPlay">
+                    <button class="btn btn-primary btn-lg fs-custom-btn fw-bold btn-shadow w-100"
+                        id="btnPlay">JUGAR</button>
                 </div>
                 <div class="w-50 w-lg-25" id="containerBtnLogin">
-                    <button class="btn btn-primary btn-lg fs-2 fw-bold btn-shadow w-100"
+                    <button class="btn btn-primary btn-lg fs-custom-btn fw-bold btn-shadow w-100"
                         id="btnLogin">LOGIN/REGISTER</button>
                 </div>
+                <div class="w-50 w-lg-25 mb-lg-4 mb-2">
+                    <button class="btn btn-primary btn-lg fs-custom-btn fw-bold btn-shadow w-100" id="btnConfig">
+                        <span class="ms-2">Configuración</span>
+                    </button>
+                </div>
+                <!-- <div class="w-50 w-lg-25">
+                    <button class="btn btn-primary btn-lg fs-custom-btn fw-bold btn-shadow w-100" id="btnStore">
+                        <span class="ms-2">Tienda</span>
+                    </button>
+                </div> -->
             </div>
         </div>
     </div>
-    <div class="position-absolute bottom-0 end-0 p-4">
-        <div class="card">
+    <div class=" btn position-absolute container-ranking-pos p-2">
+        <div class="card rounded-bottom-0">
             <div class="card-body">
                 <div id="container-ranking" class="w-100">
-
-                </div>
-                <div class="w-100">
-                    <button class="btn btn-primary btn-sm w-100" id="btnRanking">Ir a ranking</button>
                 </div>
             </div>
         </div>
+
+        <div class="w-100">
+            <button class="btn btn-primary btn-sm w-100 rounded-top-0" id="btnRanking">Ir a ranking</button>
+        </div>
     </div>
-    <button class=" btn position-absolute top-0 end-0 p-4" id="btnToProfile">
+
+    <button class="btn position-absolute top-0 end-0 p-4" id="btnToProfile">
         <div class="d-flex align-items-center justify-content-center" id="userData">
 
         </div>
     </button>
-    <div class="position-absolute bottom-0 start-0 p-4">
+    <!-- <div class="position-absolute bottom-0 start-0 p-4">
         <button class="btn btn-secondary" id="btnConfig">
             <span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -77,7 +150,7 @@
             </span>
             <span class="ms-2">Configuración</span>
         </button>
-    </div>
+    </div> -->
 
     <div class="position-absolute top-0 start-0 p-4" id="containerAdminQuestions">
         <button class="btn btn-secondary" id="btnAdminQuestions">
