--- a/web/pages/profile.html
+++ b/web/pages/profile.html
@@ -13,10 +13,10 @@
 <div class="center-screen w-100 text-center" id="content">
     <input id="idUser" hidden/>
     <div class="w-75">
-        <div class="text-start w-100 mb-lg-3">
+        <div class="text-start w-100 mb-lg-3 mb-3">
             <button class="btn btn-primary mt-3" id="btnHome">Home</button>
         </div>
-        <div class="card">
+        <div class="card mt-lg-3 mt-3">
             <div class="card-body text-start">
                 <p class="fs-1 fw-bold">Perfil</p>
                 <ul class="nav nav-tabs nav-line-tabs mb-5 fs-6">
@@ -116,11 +116,11 @@
                             </div>
                             <div class="col-lg-9 col-12">
                                 <div class="row">
-                                    <div class="col-lg-4 col-6 mb-lg-4 mb-2">
+                                    <div class="col-lg-4 col-12 mb-lg-4 mb-2">
                                         <label class="text-primary fs-7">Nombre</label>
                                         <input type="text" class="form-control" id="nameUserData"/>
                                     </div>    
-                                    <div class="col-lg-4 col-6 mb-lg-4 mb-2">
+                                    <div class="col-lg-4 col-12 mb-lg-4 mb-2">
                                         <label class="text-primary fs-7">Email</label>
                                         <input type="email" class="form-control" id="emailUserData"/>
                                     </div>                                                              
