--- a/web/pages/home.html
+++ b/web/pages/home.html
@@ -104,7 +104,7 @@
                     <button class="btn btn-primary btn-lg fs-custom-btn fw-bold btn-shadow w-100"
                         id="btnPlay">JUGAR</button>
                 </div>
-                <div class="w-50 w-lg-25" id="containerBtnLogin">
+                <div class="w-50 w-lg-25 mb-lg-4 mb-2" id="containerBtnLogin">
                     <button class="btn btn-primary btn-lg fs-custom-btn fw-bold btn-shadow w-100"
                         id="btnLogin">LOGIN/REGISTER</button>
                 </div>
