new buttons for new skills

--- a/web/pages/juego.html
+++ b/web/pages/juego.html
@@ -59,4 +59,22 @@
             <button class="btn btn-primary btn-lg w-75 py-10 btnOpcion" data-option-id=""></button>
         </div>
     </div>
+
+    <div class="position-absolute bottom-0 end-0 p-4 d-none">
+        <div class="row">
+            <div class="col">
+                <button class="btn btn-primary w-100"
+                        id="btnDiscardOptions"><i class="bi bi-virus"></i></button>
+            </div>
+            <div class="col">
+                <button class="btn btn-primary w-100"
+                        id="btnDiscardQuestion"><i class="bi bi-skip-forward-fill"></i></button>
+            </div>
+            <div class="col">
+                <button class="btn btn-primary w-100"
+                        id="btnReloadAnotherQuestion"><i class="bi bi-repeat"></i></button>
+            </div>
+        </div>
+    </div>
+
 </div>
