add toast in crud

--- a/web/pages/questions.html
+++ b/web/pages/questions.html
@@ -176,4 +176,15 @@
             </div>
         </div>
     </div>
+
+    <div class="toast-container position-fixed top-0 end-0 p-3">
+        <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-body bg-opacity-75 text-white rounded-2" id="toastType">
+                <div class="d-flex justify-content-center align-items-center">
+                    <i class="bi bi-exclamation-triangle-fill fs-5 me-2" id="toastIcon"></i>
+                    <p class="m-0" id="toastMsg"></p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
